@@ -12,20 +12,25 @@
 <A HREF="http://prodwww.informatics.jax.org/wiki/index.php/sw:Mcvload#Sanity_Reports.2FLogs">MCV Load Report Descriptions</A> - These QC reports list discrepancies found in the input file of the most recent MCV annotation load.
 <P>
 <UL>
-<LI><A HREF="/data/loads/mgi/mcvload/reports/sanity.rpt">Sanity Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/sanity.rpt">Sanity Report</A> - Fatal file format errors
 </UL>
 <P>
-<A HREF="/data/loads/mgi/mcvload/reports/reportsWithDiscrepancies.rpt">Click here for a list of the following reports which have discrepancies</A>
+<A HREF="/data/loads/mgi/mcvload/reports/reportsWithDiscrepancies.rpt">Click here for a list of the following reports which have discrepancies</A><P>
+<B>Fatal QC Reports</B>
 <UL>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_editor.rpt">Invalid Editor Login Report</A>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_evid.rpt">Invalid Evidence Code Report</A>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_jnum.rpt">Invalid JNumber Report</A>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_mcvid.rpt">Invalid MCV ID Report</A>
-<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_marker.rpt">Invalid Marker Report</a>
-<LI><A HREF="/data/loads/mgi/mcvload/reports/markertype_conflict.rpt">Marker Type Conflict Report</A>
-<LI><A HREF="/data/loads/mgi/mcvload/reports/multiple_mcv.rpt">Annotations to Multiple MCV Terms Report</A>
-<LI><A HREF="/data/loads/mgi/mcvload/reports/secondary_marker.rpt">Annotations to Secondary Marker Report</A>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/grouping_term.rpt">Annotations to Grouping Term Report</A>
+</UL>
+<P>
+<B>Warning QC Reports </B>
+<UL>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/multiple_mcv.rpt">Annotations to Multiple MCV Terms Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/markertype_conflict.rpt">Marker Type Conflict Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_marker.rpt">Invalid Marker Report</a>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/secondary_marker.rpt">Annotations to Secondary Marker Report</A>
 <LI><A HREF="/data/loads/mgi/mcvload/reports/before_after.rpt">Before/After Report</A>
 </UL>
 
